--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>What day is it? 😕</h1>
     <h2>Today is <span id="day">?</span></h2>
-     <h3>BL test </h3>
+     <h3>BL test11 </h3>
     <img src="pug.jpg" width="500" alt="pug">
 </body>
 </html>
